22062023_licenta/keycloak_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: ctfspace
  labels:
    app: keycloak
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: keycloak
  type: ClusterIP
  clusterIP: None
